ingress.yaml
# ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: key-value-store-api
spec:
  rules:
    - host: key-value-store-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: key-value-store-api
                port:
                  number: 80
